# manga-viewer-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
src/: application.rs  archive.rs  chunkprovider.rs  database.rs  dirchunkprovider.rs  main.rs  metaprovider.rs  processing.rs  structs.rs  traits.rs  ui.rs  unarr.rs
src/chunkprovider/: dirchunkprovider.rs  metaprovider.rs  mod.rs  unarrchunkprovider.rs
