[package]
name = "manga-viewer-rs"
version = "0.1.0"
edition = "2021"
description="Simple Manga/Comic Viewer"

[dependencies]
raylib = "3.7.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
libc = "0.2.132"
rfd = "*"

[target.'cfg(windows)'.build-dependencies]
windres="0.2"

[package.metadata.bundle]
icon=["images/icon.png"]
resources=["fonts/*.ttf"]
